--- a/app/src/main/res/layout/activity_driver.xml
+++ b/app/src/main/res/layout/activity_driver.xml
@@ -4,7 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:text="Schedule a Drive"
+        android:id="@+id/schedule_a_ride"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="2dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <LinearLayout
+        android:layout_below="@+id/schedule_a_ride"
         android:id="@+id/layout_panel"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -18,6 +28,7 @@
             android:layout_gravity="center"
             android:textStyle="bold"/>
         <fragment
+
             android:id="@+id/autocomplete_fragment_from"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -48,14 +59,61 @@
 
 
     </LinearLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="150dp"
+    <TextView
+        android:layout_marginTop="15dp"
+        android:textStyle="bold"
+        android:textSize="17sp"
+        android:text="On a trip"
+        android:id="@+id/onTripTextView"
+        android:layout_below="@id/layout_panel2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_below="@+id/onTripTextView"
+        android:id="@+id/ontriplayout"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recyclerview">
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/search_onTrip"
+            android:text="Destination"
+            android:layout_marginLeft="5dp"
+            android:layout_gravity="center"
+            android:textStyle="bold"/>
+        <fragment
+            android:id="@+id/autocomplete_fragment_onTrip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+            android:layout_margin="10dp"/>
 
-    </android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
+
+   <LinearLayout
+       android:layout_below="@+id/ontriplayout"
+       android:layout_width="match_parent"
+       android:layout_marginTop="5dp"
+       android:layout_height="match_parent">
+
+       <TextView
+           android:layout_marginTop="8dp"
+           android:id="@+id/yourRidesText"
+           android:textSize="17sp"
+           android:textStyle="bold"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Your Rides"/>
+       <android.support.v7.widget.RecyclerView
+            android:layout_marginTop="25dp"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:id="@+id/recyclerview">
+
+       </android.support.v7.widget.RecyclerView>
+   </LinearLayout>
 
 
 
