--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -27,7 +27,7 @@
         android:id="@+id/source"
         android:layout_below="@+id/txt1"
         android:layout_toRightOf="@+id/image"
-        android:paddingLeft="30dp"
+        android:paddingLeft="15dp"
         android:text="Delhi"
         android:textSize="20sp"/>
     <TextView
@@ -35,20 +35,30 @@
         android:layout_height="wrap_content"
         android:text="To"
         android:id="@+id/to"
-        android:layout_toRightOf="@id/txt1"
-        android:layout_marginLeft="110dp"
+        android:layout_toRightOf="@+id/image"
+        android:layout_below="@+id/source"
+        android:layout_marginLeft="10dp"
         android:textSize="17dp"
         android:textColor="#000" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/destination"
-        android:layout_below="@+id/txt1"
-        android:layout_toRightOf="@+id/source"
+        android:layout_below="@+id/to"
         android:paddingLeft="30dp"
         android:text="Kolkata"
-        android:layout_marginLeft="70dp"
+        android:layout_marginLeft="15dp"
         android:textSize="20sp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Trip not yet started"
+        android:id="@+id/status"
+        android:layout_toRightOf="@+id/image"
+        android:layout_below="@+id/destination"
+        android:layout_marginLeft="18dp"
+        android:textSize="17dp"
+        android:textColor="#000" />
 
 
 
