--- a/app/src/main/res/layout/activity_driver.xml
+++ b/app/src/main/res/layout/activity_driver.xml
@@ -117,10 +117,18 @@
         </android.support.v7.widget.RecyclerView>
 
 
+
     </LinearLayout>
 
 
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/driver_progressBar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="600dp"
+        android:visibility="invisible" />
 
 
 
