--- a/app/src/main/res/layout/activity_rider.xml
+++ b/app/src/main/res/layout/activity_rider.xml
@@ -1,63 +1,107 @@
-<RelativeLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
-        android:id="@+id/layout_panel"
-        android:orientation="horizontal"
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/search_from"
-            android:text="From"
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center"
-            android:textStyle="bold"/>
-        <fragment
-            android:id="@+id/rider_autocomplete_fragment_from"
+        <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-            android:layout_margin="10dp"
-            android:layout_weight="5" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_below="@+id/layout_panel"
-        android:id="@+id/layout_panel2"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/search_to"
-            android:text="To"
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center"
-            android:textStyle="bold"/>
-        <fragment
-            android:id="@+id/rider_autocomplete_fragment_to"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-            android:layout_margin="10dp"/>
+            app:contentInsetLeft="0dp"
+            app:contentInsetStart="0dp"
+            app:layout_scrollFlags="scroll|enterAlways">
+            <RelativeLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:text="Drive"
+                    android:id="@+id/schedule_a_ride"
+                    android:textSize="17sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginLeft="2dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <LinearLayout
+                    android:layout_below="@+id/schedule_a_ride"
+                    android:id="@+id/layout_panel"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/search_from"
+                        android:text="From"
+                        android:layout_marginLeft="10dp"
+                        android:layout_gravity="center"
+                        android:textStyle="bold"/>
+                    <fragment
 
+                        android:id="@+id/rider_autocomplete_fragment_from"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+                        android:layout_margin="10dp"
+                        android:layout_weight="5" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_below="@+id/layout_panel"
+                    android:id="@+id/layout_panel2"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/search_to"
+                        android:text="To"
+                        android:layout_marginLeft="10dp"
+                        android:layout_gravity="center"
+                        android:textStyle="bold"/>
+                    <fragment
+                        android:id="@+id/rider_autocomplete_fragment_to"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+                        android:layout_margin="10dp"/>
 
-    </LinearLayout>
+                </LinearLayout>
+                <TextView
+                    android:id="@+id/yourRidesText"
+                    android:layout_below="@id/layout_panel2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:text="Your Rides"
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+        </android.support.v7.widget.Toolbar>
 
+    </android.support.design.widget.AppBarLayout>
     <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="150dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/rider_recyclerview">
+        android:id="@+id/rider_recyclerview"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     </android.support.v7.widget.RecyclerView>
 
-
-
-
-</RelativeLayout>
+    <ProgressBar
+        android:layout_gravity="center"
+        android:id="@+id/rider_progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="500dp"
+        android:visibility="invisible" />
+</android.support.design.widget.CoordinatorLayout>
