--- a/app/src/main/res/layout/activity_trip_details_rider.xml
+++ b/app/src/main/res/layout/activity_trip_details_rider.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.TripDetails">
-
+    tools:context=".ui.TripDetailsDriver">
     <TextView
         android:id="@+id/textEmailReg"
         android:layout_width="wrap_content"
@@ -17,157 +16,25 @@
         android:textSize="25sp" />
     <TextView
         android:textStyle="bold"
-        android:id="@+id/label_start_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="320dp"
-        android:layout_marginBottom="672dp"
-        android:text="Trip Start time"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-     <TextView
-         android:textStyle="bold"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="Click to set Start time"
-         android:id="@+id/trip_start_time"
-         android:layout_marginTop="80dp"
-         android:layout_marginLeft="150dp" />
-    <TextView
-        android:textStyle="bold"
-        android:id="@+id/label_start_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="320dp"
-        android:layout_marginBottom="672dp"
-        android:text="Date"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Click to set Date"
-        android:id="@+id/trip_start_date"
-        android:layout_marginTop="120dp"
-        android:layout_marginLeft="150dp" />
-
-    <TextView
-        android:textStyle="bold"
-        android:id="@+id/label_total_distance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="320dp"
-        android:layout_marginBottom="672dp"
-        android:text="Trip distance"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="10km"
-        android:id="@+id/trip_distance"
-        android:layout_marginTop="160dp"
-        android:layout_marginLeft="150dp" />
-    <TextView
-        android:textStyle="bold"
-        android:id="@+id/label_total_duration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="320dp"
-        android:layout_marginBottom="672dp"
-        android:text="Trip duration"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="2 hrs"
-        android:id="@+id/trip_duration"
-        android:layout_marginTop="200dp"
-        android:layout_marginLeft="150dp" />
-    <TextView
-        android:textStyle="bold"
-        android:id="@+id/label_total_fare"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginEnd="320dp"
-        android:layout_marginBottom="672dp"
-        android:text="Fare"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Rs 250"
-        android:id="@+id/trip_fare"
-        android:layout_marginTop="250dp"
-        android:layout_marginLeft="150dp"/>
-    <TextView
-        android:id="@+id/label_status"
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="320dp"
-        android:layout_marginEnd="320dp"
-        android:layout_marginBottom="672dp"
-        android:text="Trip Status"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:id="@+id/trip_status"
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Yet to Start"
-        android:layout_marginTop="320dp"
-        android:layout_marginLeft="150dp"/>
-    <TextView
-        android:textStyle="bold"
         android:id="@+id/label_from"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="370dp"
+        android:layout_marginTop="70dp"
         android:layout_marginEnd="320dp"
         android:layout_marginBottom="672dp"
         android:text="From"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/colorAccent"/>
     <TextView
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/trip_from"
-        android:layout_marginTop="370dp"
+        android:layout_marginTop="70dp"
         android:layout_marginLeft="150dp"/>
     <TextView
         android:textStyle="bold"
@@ -175,21 +42,95 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="130dp"
         android:layout_marginEnd="320dp"
         android:layout_marginBottom="672dp"
         android:text="To"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/colorAccent"/>
     <TextView
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/trip_to"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="130dp"
         android:layout_marginLeft="150dp"/>
+
+
+    <TextView
+        android:textStyle="bold"
+        android:id="@+id/label_total_distance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="190dp"
+        android:layout_marginEnd="320dp"
+        android:layout_marginBottom="672dp"
+        android:text="Trip distance"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/colorAccent"/>
+    <TextView
+        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10km"
+        android:id="@+id/trip_distance"
+        android:layout_marginTop="190dp"
+        android:layout_marginLeft="150dp" />
+    <TextView
+        android:textStyle="bold"
+        android:id="@+id/label_total_duration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginEnd="320dp"
+        android:layout_marginBottom="672dp"
+        android:text="Trip duration"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/colorAccent"/>
+    <TextView
+        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2 hrs"
+        android:id="@+id/trip_duration"
+        android:layout_marginTop="250dp"
+        android:layout_marginLeft="150dp" />
+    <TextView
+        android:textStyle="bold"
+        android:id="@+id/label_total_fare"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="310dp"
+        android:layout_marginEnd="320dp"
+        android:layout_marginBottom="672dp"
+        android:text="Fare"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/colorAccent"/>
+    <TextView
+        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Rs 250"
+        android:id="@+id/trip_fare"
+        android:layout_marginTop="310dp"
+        android:layout_marginLeft="150dp"/>
+
+
 
     <Button
         android:id="@+id/trip_confirm"
@@ -198,7 +139,7 @@
         android:layout_marginLeft="200dp"
         android:layout_marginTop="450dp"
         android:background="@color/startblue"
-        android:text="Click to Schedule "
+        android:text="Ride Later"
         android:textStyle="bold" />
 
     <Button
@@ -206,8 +147,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="450dp"
-        android:background="@color/colorAccent"
-        android:text="Start Now"
+        android:background="@color/startblue"
+        android:text="Ride Now"
         android:id="@+id/start_trip_button"/>
 
 
