--- a/app/src/main/res/layout/activity_available_rides.xml
+++ b/app/src/main/res/layout/activity_available_rides.xml
@@ -1,9 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.AvailableRides">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/quantum_yellow900"
+        android:id="@+id/linearlayout1">
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/availableridesText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="Available Rides"
+            android:textColor="@color/Black"
+            android:textSize="25sp" />
+    </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/linearlayout1"
+        android:id="@+id/available_rides_recycleview_adapter">
+
+    </android.support.v7.widget.RecyclerView>
+
+
+</RelativeLayout>
