--- a/app/src/main/res/layout/activity_trip_details_rider.xml
+++ b/app/src/main/res/layout/activity_trip_details_rider.xml
@@ -151,6 +151,15 @@
         android:text="Ride Now"
         android:id="@+id/start_trip_button"/>
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/trip_details_rider_progressBar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="560dp"
+        android:visibility="invisible"
+        android:layout_gravity="center" />
+
 
 
 </RelativeLayout>
