--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,25 +3,24 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-
-    <color name="red1">#af0a0a</color>
-    <color name="red2">#c40909</color>
-    <color name="red3">#e50909</color>
-    <color name="orange1">#FF8333</color>
-    <color name="green1">#29CF40</color>
-    <color name="blue1">#66a3ff</color>
-    <color name="blue2">#0033cc</color>
-    <color name="linkBlue">#4d94ff</color>
-    <color name="blue3">#00c4cc</color>
-    <color name="blue4">#00aab1</color>
-    <color name="blue5">#007f85</color>
-    <color name="White">#fff</color>
+    <color name="cwmred1">#af0a0a</color>
+    <color name="cwmred2">#c40909</color>
+    <color name="cwmred3">#e50909</color>
+    <color name="cwmorange1">#FF8333</color>
+    <color name="cwmgreen1">#29CF40</color>
+    <color name="cwmblue1">#66a3ff</color>
+    <color name="cwmblue2">#0033cc</color>
+    <color name="cwmlinkBlue">#4d94ff</color>
+    <color name="cwmblue3">#00c4cc</color>
+    <color name="cwmblue4">#00aab1</color>
+    <color name="cwmblue5">#007f85</color>
+    <color name="cwmWhite">#fff</color>
     <color name="darkGrey">#a6a6a6 </color>
-    <color name="Grey">#c3c3c3 </color>
-    <color name="lightGrey">#f2f2f2 </color>
+    <color name="cwmGrey">#c3c3c3 </color>
+    <color name="cwmlightGrey">#f2f2f2 </color>
     <color name="transparentGrey">#8f737373 </color>
-    <color name="DarkGrey">#737373 </color>
-    <color name="Black">#000 </color>
+    <color name="cwmDarkGrey">#737373 </color>
+    <color name="cwmBlack">#000 </color>
     <color name="graylight">#fafafa</color>
     <color name="startblue">#09c6df</color>
     <color name="endblue">#0bcceb</color>
@@ -29,5 +28,33 @@
     <color name="blackcolor">#000</color>
     <color name="lightorange">#fdf2df</color>
     <color name="lightorangedark">#ebd6ab</color>
+    <color name="cwmcolorPrimary">#3F51B5</color>
+    <color name="cwmcolorPrimaryDark">#303F9F</color>
+    <color name="cwmcolorAccent">#FF4081</color>
+    <color name="White">#fff</color>
+    <color name="Grey">#c3c3c3 </color>
+    <color name="lightGrey">#f2f2f2 </color>
+    <color name="grey1">#e6e6e6 </color>
+    <color name="grey2">#d9d9d9 </color>
+    <color name="DarkGrey">#737373 </color>
+    <color name="Black">#000000</color>
+    <color name="linkBlue">#4d94ff</color>
+    <color name="teal1">#00d4c5</color>
+    <color name="teal2">#008ae6</color>
+    <color name="blue2">#99ccff</color>
+    <color name="blue3">#33ccff</color>
+    <color name="blue4">#4795ff</color>
+    <color name="red5">#ff9999</color>
+    <color name="red4">#ff6666</color>
+    <color name="red3">#ff0000</color>
+    <color name="red2">#ff1a1a</color>
+    <color name="green2">#85e085</color>
+    <color name="blue1">#4da6ff</color>
+    <color name="blue5">#455ad3</color>
+    <color name="red1">#ff4d4d</color>
+    <color name="orange1">#ffa733</color>
+    <color name="green1">#33cc33</color>
+    <color name="yellow1">#e6e600</color>
+    <color name="purple1">#8e2bd4</color>
 
 </resources>
